fix user api
